tests/baselines/reference/allowSyntheticDefaultImports6.errors.txt
error TS5107: Option 'allowSyntheticDefaultImports=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(1,8): error TS1259: Module '"b"' can only be default-imported using the 'esModuleInterop' flag


!!! error TS5107: Option 'allowSyntheticDefaultImports=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== b.d.ts (0 errors) ====
    declare class Foo {
    	member: string;
    }
    export = Foo;
    
==== a.ts (1 errors) ====
    import Foo from "./b";
           ~~~
!!! error TS1259: Module '"b"' can only be default-imported using the 'esModuleInterop' flag
!!! related TS2594 b.d.ts:4:1: This module is declared with 'export =', and can only be used with a default import when using the 'esModuleInterop' flag.
    export var x = new Foo();
    